syntax = "proto3";

package io.provenance.objectstore.gateway;

service Gateway {
  rpc FetchObject (FetchObjectRequest) returns (FetchObjectResponse) {};
}

message FetchObjectRequest {
  string scope_address = 1;
  string granter_address = 2; // optional
}

message FetchObjectResponse {
  string scope_id = 1;
  repeated Record records = 2;
}

// todo: figure out encryption scheme
//message EncryptedRecords {
//  bytes record_map = 1; // encrypted byte array of RecordMap
//}
//
//message RecordMap {
//  map<string, Record> records = 1;
//}

message Record {
  string name = 1;
  repeated RawObject inputs = 2;
  repeated RawObject outputs = 3;
}

message RawObject {
  string hash = 1;
  string type = 2;
  bytes object_bytes = 3;
}
